--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<h1>Hi, I'm <strong>Samyak Jain</strong></h1>
 					<p> Thinker | Learner | Programmer</p>
 					<ul class="actions special">
-						<li><a href="/portfolio/resources/samyak_202is022_resume.pdf" class="button scrolly">Resume</a></li>
+						<li><a href="resources/samyak_202is022_resume.pdf" class="button scrolly">Resume</a></li>
 					</ul>
 				</div>
 			</section>
@@ -58,7 +58,7 @@
 					
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="../resources/Samyak.png" alt="" /></span>
+							<span class="image fit"><img src="resources/Samyak.png" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -192,8 +192,8 @@
 						<h3>Internship</h3>
 						<p></p>
 						<ul class="actions special">
-                            <li><a href="/portfolio/resources/2ndYr_intern_Certificate.pdf" class="button" target="_blank">II-year</a></li>
-                            <li><a href="/portfolio/resources/3rdYr_intern_Certificate.pdf" class="button" target="_blank">III-year</a></li>	
+                            <li><a href="resources/2ndYr_intern_Certificate.pdf" class="button" target="_blank">II-year</a></li>
+                            <li><a href="resources/3rdYr_intern_Certificate.pdf" class="button" target="_blank">III-year</a></li>	
 						</ul>
 					</div>
 					
